--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Junior
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Exercício de GitHub</title>
+</head>
+<body>
+    <p><h1>Exercíco de GitHub</h1></p>
+    <div><h2>Aprendendo a usar GitHub</h2></div>
+    <span>Utilizando outras tags</span>
+</body>
+</html>
