--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <p><h1>Exercíco de GitHub</h1></p>
     <div><h2>Aprendendo a usar GitHub</h2></div>
     <span>Utilizando outras tags</span>
+    <h3>AULA CODERHOUSE</h3>
 </body>
 </html>
